Sat Jun 13 06:45:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_throw): fixed rdoc about execption.
	  [ruby-core:23824]

Fri Jun 12 14:56:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): associate the input encoding when
	  copying an absolute path.  [ruby-dev:38594]

Thu Jun 11 15:27:17 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/prime.rb: documentation typo fixed.  a patch from okkez.
	  [ruby-dev:38586]

Wed Jun 10 18:15:17 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dir.c (dir_s_getwd): directory path's encoding should be filesystem's
	  one.

	* lib/tmpdir.rb: ditto (but not finished yet.)

Tue Jun  9 22:38:09 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (log10): raised exception when the given number is
	  a negative real.

Tue Jun  9 15:13:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_s_glob): fixed rdoc.  a patch from Joseph Pecoraro a
	  [ruby-core:23767].

Tue Jun  9 10:58:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, win32/Makefile.sub (RMALL): need for distclean-rdoc.

Tue Jun  2 17:32:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (first_i): Enumerator#first should consume only what is
	  needed.   a patch from Marc-Andre Lafortune.  [ruby-core:23661]

	* enum.c (enum_first): call to_int once for an argument.  based on
	  a patch from Marc-Andre Lafortune.

Tue Jun  2 13:27:21 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ripper/test_filter.rb: add tests. see [ruby-dev:37856]

Mon Jun  1 11:21:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_capture, fiber_store): reraise transferred error.

	* cont.c (fiber_switch): transfers dead fiber error to the previouse
	  or root fiber if the current fiber is dead.  [ruby-core:23651]

Mon Jun  1 07:20:02 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): returns Inf if
	  exp is bigger than DBL_MANT_DIG.
